--- a/src/temp.html
+++ b/src/temp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><%= htmlWebpackPlugin.options.title%></h1>
+        <div id="fromjs"></div>
     </header>
 </body>
 </html>
